Compositing causes access violation when rendering from command line #46605

Closed
opened 2015-10-26 12:53:30 +01:00 by Greg Zaal · 6 comments
Member

System Information

  • Windows 7 64 bit
  • Quadro 2000D

I tested it on a few similar PCs (on the same network), all of them crash. Will test it on my home PC as well later.

Blender Version
Broken: 2.76 official & recent master from buildbot(48f7dd6)

Short description of error
When rendering an animation from a certain file from the command line, it crashes ~50% of the time with Error: EXCEPTION_ACCESS_VIOLATION

Some frames it completes, some frames it crashes. It's not consistent about which frames do or don't finish.

It seems to be related to compositing, as the crash happens when the render finishes, and if I disable compositing from the post-processing panel then it does not crash at all. But the comp setup is simple (just saving out layers and passes), and there doesn't seem to be any particular node at fault.

Exact steps for others to reproduce the error
Blend file: Sh01_tst.blend

  • Render file from command line with blender -b Sh01_tst.blend -a and it should crash after a few frames (sometimes the first one, sometimes the 10th, it's really not consistent).
  • Open blender UI, load the file and render the animation. It probably won't crash, although on two PCs it did crash after a while but I can't repeat it.
  • Disable compositing in post-processing panel, save the file and render it from the command line again. It won't crash now.
**System Information** - Windows 7 64 bit - Quadro 2000D I tested it on a few similar PCs (on the same network), all of them crash. Will test it on my home PC as well later. **Blender Version** Broken: 2.76 official & recent master from buildbot(48f7dd6) **Short description of error** When rendering an animation from a certain file from the command line, it crashes ~50% of the time with `Error: EXCEPTION_ACCESS_VIOLATION` Some frames it completes, some frames it crashes. It's not consistent about which frames do or don't finish. It seems to be related to compositing, as the crash happens when the render finishes, and if I disable compositing from the post-processing panel then it does not crash at all. But the comp setup is simple (just saving out layers and passes), and there doesn't seem to be any particular node at fault. **Exact steps for others to reproduce the error** Blend file: [Sh01_tst.blend](https://archive.blender.org/developer/F247541/Sh01_tst.blend) - Render file from command line with `blender -b Sh01_tst.blend -a` and it should crash after a few frames (sometimes the first one, sometimes the 10th, it's really not consistent). - Open blender UI, load the file and render the animation. It probably won't crash, although on two PCs it did crash after a while but I can't repeat it. - Disable compositing in post-processing panel, save the file and render it from the command line again. It won't crash now.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

looks like a race condition in https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/render/intern/source/pipeline.c#l2108

R.i.infostr points to garbage once it hits

https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/render/intern/source/pipeline.c#l179

even though i can see NULL was passed into it, so some other thread must have come along and is in the process of messing with it?

looks like a race condition in https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/render/intern/source/pipeline.c#l2108 R.i.infostr points to garbage once it hits https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/render/intern/source/pipeline.c#l179 even though i can see NULL was passed into it, so some other thread must have come along and is in the process of messing with it?

This issue was referenced by 242246e9fc

This issue was referenced by 242246e9fc954f66ff78161572948da6689298be

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46605
No description provided.