Fix T46605: Compositing causes access violation when rendering from command line

Seems was caused by the race condition in the stats printing, should be all fine now.

Nice for 'a' release.